--- a/styles.css
+++ b/styles.css
@@ -8,17 +8,15 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
     color: #333;
-    width:90%;
-    margin: auto;
 }
 .container{
     margin: 0 auto;
     padding: 0 30px;
     max-width: 1000px;
-    height: 100%;
 }
 .navbar{
     background: #1f2937;
+    height:60px;
 }
 .navbar .logo{
     font-size: 24px;
@@ -35,32 +33,15 @@ body{
     color: #e5e7eb;
 
 }
-.nav .container{
+.navbar .container{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 40px;
-    height: 1005;
+    margin-bottom: 80px;
+    height:100%;
 }
-.navbar .container{
-    padding-bottom: 40px;
-}
-.navbar .header{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.navbar .header .placeholder{
-    display: flex;
-    flex-direction: column;
-    justify-content:center;
-    align-items: center;
-    height: 150px;
-    width:300px;
-    color: #fff;
-    padding: 20px;
-    background: darkgrey;
-}
+
+
 .header h1{
     font-size: 48px;
     font-weight:bold;
@@ -78,6 +59,32 @@ body{
     padding:5px;
     margin-top: 10px;
 }
+.header{
+background: #1f2937;
+}
+
+.header .container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 60px;
+    margin-top:0;
+    height: 100%;
+    padding-top:40px;
+}
+
+.header .placeholder {
+display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items: center;
+    height: 150px;
+    width:300px;
+    color: #fff;
+    padding: 20px;
+    background: darkgrey;
+}
+
 .section-one{
     background: #fff;
 }
@@ -103,13 +110,13 @@ body{
     display: flex;
     justify-content: center;
 }
-.section-two .quote{
+.section-two blockquote{
     font-size: 30px;
     color:#1f2937;
     font-style: italic;
     position: relative;
 }
-.section-two .quote .quote-ref{
+.section-two blokcquote .quote-ref{
     position: absolute;
     right: 0;
     bottom: 0;
@@ -143,14 +150,26 @@ body{
 }
 
 @media (max-width: 768px) {
-    .navbar .header .container {
-      flex-direction: column;
-      padding-top: 20px;
-      text-align: center;
-    }
-  
-    section .container {
-      display: block;
-      text-align: center;
-    }
+  .header .container {
+    flex-direction: column;
+    padding-top: 20px;
+    text-align: center;
   }
+
+  .section-one .container {
+    display: block;
+    text-align: center;
+  }
+  .section-two .container {
+    flex-direction: column;
+    padding-top: 20px;
+    text-align: center;
+  }
+  
+ .section-three .container {
+    flex-direction: column;
+    padding-top: 20px;
+    text-align: center;
+  }
+}
+
